--- a/csce242/index.html
+++ b/csce242/index.html
@@ -7,8 +7,7 @@
         <h1>CSCE 242: Website Applications</h1>
         <h1>Christian Durant</h1>
 
-        <a href="index.html">Home</a>
-        <a href="communication.html">Communication</a>
+        
 
         <p>
           The website applications class focuses on web technologies to support client-server computing. It also, 
@@ -27,7 +26,7 @@
 
         <h2>Assignments</h2>
         <ul>
-          <li>Basic HTML</li>
+          <li><a href="communication.html">Communication</a></li>
         </ul>
 
     </body>
