--- a/csce242/assignments/assignment1/communication.html
+++ b/csce242/assignments/assignment1/communication.html
@@ -27,7 +27,7 @@
         <img src="images/communication1.png"/>
 
         <a href="index.html">Home</a>
-        <a href="communication.html">Communication</a>
+        <a href="/CSCE242/DurantChristian.github.io/csce242/assignments/assignment1/communication.html">Communication</a>
 
         <h2>Communication in Teamwork</h2>
         <ul>
