edited home link

--- a/csce242/assignments/assignment1/communication.html
+++ b/csce242/assignments/assignment1/communication.html
@@ -26,7 +26,7 @@
 
         <img src="images/communication1.png"/>
 
-        <a href="index.html">Home</a>
+        <a href="https://durantchristian.github.io/csce242/">Home</a>
         <a href="https://durantchristian.github.io/csce242/assignments/assignment1/">Communication</a>
 
         <h2>Communication in Teamwork</h2>
