edited home link

--- a/csce242/assignments/assignment1/index.html
+++ b/csce242/assignments/assignment1/index.html
@@ -4,54 +4,30 @@
         <title>index.html</title>
     </head>
     <body>
-        <h1>The importance of effective communication in work</h1>
+        <h1>CSCE 242: Website Applications</h1>
         <h1>Christian Durant</h1>
-        <img src="images/communication2.png"/>
+
+        
 
         <p>
-          Effective communication is crucial for successful teamwork, as it helps ensure that all team members are
-          on the same page. Clear communication allows individuals to express their ideas, ask questions, and
-          provide feedback in a way that others can understand. Active listening plays a key role in communication,
-          as it shows respect for others' opinions and fosters collaboration. When team members communicate openly 
-          and honestly, trust is built, which is essential for a positive working environment.
+          The website applications class focuses on web technologies to support client-server computing. It also, 
+          involves implementation of client-server applications. The students will be utilizing HTML and CSS to
+          design the front-end of a website; matching a given specification. Students will be using javaScript to
+          add functionality to their website. On the back-end, students will learn to utilize node and sever side 
+          javaScript to store and retrieve data from a server. Students are able to interact with the instructor, 
+          as well as interact with other students, during in class discussions. The students will be engage in 
+          course content by completeing programming assignments, projects, and participation activities. 
+          The learning outcome of the class will consists of understanding the fundamentals of source control, 
+          being able to create an environment for successful website development using HTML, CSS, and javaScript, 
+          able to apply object-oriented software development to a javaScript environment, able to gather and parse 
+          info contained in JSON, able to create server side applications, and being able to apply the fundamentals 
+          of client and server side computing and create applications which exchange data.
         </p>
-        <p>
-          Miscommunication can lead to misunderstandings, delays, and frustration, so it's important to choose
-          words carefully and verify that messages are received accurately. Non-verbal communication, such as
-          body language and tone of voice, also plays a significant role in how messages are interpreted. 
-          Additionally, feedback should be constructive and focused on improving performance rather than 
-          criticizing individuals. In the end, effective communication helps teams work more efficiently and 
-          achieve their goals by minimizing conflict and maximizing collaboration.
-        </p>
 
-        <img src="images/communication1.png"/>
-
-        <a href="index.html">Home</a>
-        <a href="communication.html">Communication</a>
-
-        <h2>Communication in Teamwork</h2>
+        <h2>Assignments</h2>
         <ul>
-            <li>Active Listening and Feedback</li>
-            <li>Clarity and Accuracy</li>
-            <li>Building Trust and Cooperation</li>
+          <li><a href="https://durantchristian.github.io/csce242/assignments/assignment1/">Communication</a></li>
         </ul>
 
-        <table>
-            <tr>
-                <th>Communication</th>
-                <th>Description</th>
-                <th>Person</th>
-            </tr>
-            <tr>
-                <th>Verbal Communication</th>
-                <th>Essential for sharing ideas, giving instructions, and discussing progress.</th>
-                <th>Team Leader</th>
-            </tr>
-            <tr>
-                <th>Visual communication</th>
-                <th>Communication tools like charts, diagrams, and presentations help clarify complex ideas, track progress, and align team members on shared goals.</th>
-                <th>Analyst</th>
-            </tr>
-        </table>
     </body>
 </html>
