edited home link

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -26,7 +26,7 @@
 
         <h2>Assignments</h2>
         <ul>
-          <li><a href="https://durantchristian.github.io/csce242/assignments/assignment1/">Communication</a></li>
+          <li><a href="https://durantchristian.github.io/csce242/assignments/assignment1/communication.html">Communication</a></li>
         </ul>
 
     </body>
