--- a/csce242/assignments/assignment1/communication.html
+++ b/csce242/assignments/assignment1/communication.html
@@ -5,9 +5,12 @@
     </head>
     <body>
         <h1>The importance of effective communication in work</h1>
-        <h1>Christian Durant</h1>
+        <h2>Christian Durant</h2>
+        <div id="main nav">
         <a href="https://durantchristian.github.io/csce242/">Home</a>
         <a href="https://durantchristian.github.io/csce242/assignments/assignment1/communication.html">Communication</a>
+        </div>
+
         <img src="images/communication2.png"/>
 
         <p>
