--- a/csce242/assignments/assignment01/communication.html
+++ b/csce242/assignments/assignment01/communication.html
@@ -4,8 +4,9 @@
         <title>index.html</title>
     </head>
     <body>
+        <!-- CSCE 242: Web Applications -->
+        <!-- Christian Durant-->
         <h1>The importance of effective communication in work</h1>
-        <h2>Christian Durant</h2>
         <div id="main nav">
         <a href="https://durantchristian.github.io/csce242/">Home</a>
         <a href="https://durantchristian.github.io/csce242/assignments/assignment01/communication.html">Communication</a>
