--- a/csce242/index.html
+++ b/csce242/index.html
@@ -4,7 +4,7 @@
         <title>index.html</title>
     </head>
     <body>
-        <h1>CSCE 242: Website Applications</h1>
+        <h1>CSCE 242: Web Applications</h1>
         <h1>Christian Durant</h1>
 
         
