changed communication link

--- a/csce242/assignments/assignment01/communication.html
+++ b/csce242/assignments/assignment01/communication.html
@@ -9,7 +9,7 @@
         <h1>The importance of effective communication in work</h1>
         <div id="main nav">
         <a href="https://durantchristian.github.io/csce242/">Home</a>
-        <a href="https://durantchristian.github.io/csce242/assignments/assignment01/communication.html">Communication</a>
+        <a href="https://www.careeraddict.com/the-importance-of-effective-communication-in-the-workplace">Communication</a>
         </div>
 
         <img src="images/communication2.png"/>
