--- a/csce242/assignments/assignment01/communication.html
+++ b/csce242/assignments/assignment01/communication.html
@@ -4,12 +4,12 @@
         <title>index.html</title>
     </head>
     <body>
-        <!-- CSCE 242: Web Applications -->
-        <!-- Christian Durant-->
+        <!-- CSCE 242: Website Applications -->
+        <!-- Christian Durant -->
         <h1>The importance of effective communication in work</h1>
         <div id="main nav">
         <a href="https://durantchristian.github.io/csce242/">Home</a>
-        <a href="https://www.careeraddict.com/the-importance-of-effective-communication-in-the-workplace">Communication</a>
+        <a href="https://www.careeraddict.com/the-importance-of-effective-communication-in-the-workplace">Communication Information</a>
         </div>
 
         <img src="images/communication2.png"/>
@@ -46,14 +46,14 @@
                 <th>Person</th>
             </tr>
             <tr>
-                <th>Verbal Communication</th>
-                <th>Essential for sharing ideas, giving instructions, and discussing progress.</th>
-                <th>Team Leader</th>
+                <td>Verbal Communication</td>
+                <td>Essential for sharing ideas, giving instructions, and discussing progress.</td>
+                <td>Team Leader</td>
             </tr>
             <tr>
-                <th>Visual communication</th>
-                <th>Communication tools like charts, diagrams, and presentations help clarify complex ideas, track progress, and align team members on shared goals.</th>
-                <th>Analyst</th>
+                <td>Visual communication</td>
+                <td>Communication tools like charts, diagrams, and presentations help clarify complex ideas, track progress, and align team members on shared goals.</td>
+                <td>Analyst</td>
             </tr>
         </table>
     </body>
