--- a/csce242/assignments/assignment01/communication.html
+++ b/csce242/assignments/assignment01/communication.html
@@ -38,7 +38,8 @@
             <li>Clarity and Accuracy</li>
             <li>Building Trust and Cooperation</li>
         </ul>
-
+        
+        <div>
         <table>
             <tr>
                 <th>Communication</th>
@@ -56,5 +57,6 @@
                 <td>Analyst</td>
             </tr>
         </table>
-    </body>
+    </div>
+</body>
 </html>
