--- a/csce242/assignments/assignment01/communication.html
+++ b/csce242/assignments/assignment01/communication.html
@@ -38,8 +38,7 @@
             <li>Clarity and Accuracy</li>
             <li>Building Trust and Cooperation</li>
         </ul>
-        
-        <div>
+
         <table>
             <tr>
                 <th>Communication</th>
@@ -47,16 +46,15 @@
                 <th>Person</th>
             </tr>
             <tr>
-                <td>Verbal Communication</td>
-                <td>Essential for sharing ideas, giving instructions, and discussing progress.</td>
-                <td>Team Leader</td>
+                <th>Verbal Communication</th>
+                <th>Essential for sharing ideas, giving instructions, and discussing progress.</th>
+                <th>Team Leader</th>
             </tr>
             <tr>
-                <td>Visual communication</td>
-                <td>Communication tools like charts, diagrams, and presentations help clarify complex ideas, track progress, and align team members on shared goals.</td>
-                <td>Analyst</td>
+                <th>Visual communication</th>
+                <th>Communication tools like charts, diagrams, and presentations help clarify complex ideas, track progress, and align team members on shared goals.</th>
+                <th>Analyst</th>
             </tr>
         </table>
-    </div>
-</body>
+    </body>
 </html>
