added external link

--- a/csce242/assignments/assignment01/communication.html
+++ b/csce242/assignments/assignment01/communication.html
@@ -10,6 +10,7 @@
         <div id="main nav">
         <a href="https://durantchristian.github.io/csce242/">Home</a>
         <a href="https://www.careeraddict.com/the-importance-of-effective-communication-in-the-workplace">Communication Information</a>
+        <a href="https://www.coursera.org/articles/workplace-communication?msockid=1e07fc4f31a3674007cee8c230b466c7">Learning Communication</a>
         </div>
 
         <img src="images/communication2.png"/>
