--- a/csce242/index.html
+++ b/csce242/index.html
@@ -2,10 +2,12 @@
 <html lang="eng">
     <head>
         <title>index.html</title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>CSCE 242: Website Applications</h1>
-        <h1>Christian Durant</h1>
+      <div id="content-container">
+        <h1 id="main-heading">CSCE 242: Website Applications</h1>
+        <h1 id="author-name">Christian Durant</h1>
 
         <p>
           The website applications class focuses on web technologies to support client-server computing. It also, 
@@ -22,10 +24,11 @@
           of client and server side computing and create applications which exchange data.
         </p>
 
-        <h2>Assignments</h2>
-        <ul>
-          <li><a href="https://durantchristian.github.io/csce242/assignments/assignment01/communication.html">Communication</a></li>
+        <h2 id="assignments-heading">Assignments</h2>
+        <ul id="assignments-list">
+          <li><a href="https://durantchristian.github.io/csce242/assignments/assignment01/communication.html" class="assignment-link">Communication</a></li>
+          <li><a href="https://durantchristian.github.io/csce242/assignments/assignment02/wildlife.html" class="assignment-link">Assignment2</a></li>
         </ul>
-
+      </div>
     </body>
 </html>
