--- a/csce242/assignments/assignment02/wildlife.html
+++ b/csce242/assignments/assignment02/wildlife.html
@@ -47,24 +47,24 @@
                 <th>Examples</th>
             </tr>
             <tr>
-                <td>Habitat Protection</td>
-                <td>Preserving natural areas to provide safe environmentas for wildlife.</td>
-                <td>National parks, wildlife reserves</td>
+                <th>Habitat Protection</th>
+                <th>Preserving natural areas to provide safe environmentas for wildlife.</th>
+                <th>National parks, wildlife reserves</th>
             </tr>
             <tr>
-                <td>Anti-Poaching Efforts</td>
-                <td>Preventing illegal hunting and trade of endangered species.</td>
-                <td>Wildlife patrols, stricter laws</td>
+                <th>Anti-Poaching Efforts</th>
+                <th>Preventing illegal hunting and trade of endangered species.</th>
+                <th>Wildlife patrols, stricter laws</th>
             </tr>
             <tr>
-                <td>Wildlife Rehabilitation</td>
-                <td>Rescuing and treating injured or endangered animals for release.</td>
-                <td>Animal sanctuaries, rescue centers</td>
+                <th>Wildlife Rehabilitation</th>
+                <th>Rescuing and treating injured or endangered animals for release.</th>
+                <th>Animal sanctuaries, rescue centers</th>
             </tr>
             <tr>
-                <td>Sustainable Practices</td>
-                <td>Reducing human impact on wildlfie through responsible actions.</td>
-                <td>Recycling, reducing plastic waste</td>
+                <th>Sustainable Practices</th>
+                <th>Reducing human impact on wildlfie through responsible actions.</th>
+                <th>Recycling, reducing plastic waste</th>
             </tr>
         </table>
         </div>
