--- a/csce242/index.html
+++ b/csce242/index.html
@@ -26,8 +26,8 @@
 
         <h2 id="assignments-heading">Assignments</h2>
         <ul id="assignments-list">
-          <a href="https://durantchristian.github.io/csce242/assignments/assignment01/communication.html" class="assignment-link">Communication</a>
-          <a href="https://durantchristian.github.io/csce242/assignments/assignment02/wildlife.html" class="assignment-link">Assignment 2</a>
+          <li><a href="https://durantchristian.github.io/csce242/assignments/assignment01/communication.html" class="assignment-link">Communication</a></li>
+          <li><a href="https://durantchristian.github.io/csce242/assignments/assignment02/wildlife.html" class="assignment-link">Assignment 2</a></li>
         </ul>
       </div>
     </body>
