--- a/csce242/index.html
+++ b/csce242/index.html
@@ -28,6 +28,7 @@
         <ul id="assignments-list">
           <li><a href="https://durantchristian.github.io/csce242/assignments/assignment01/communication.html" class="assignment-link">Communication</a></li>
           <li><a href="https://durantchristian.github.io/csce242/assignments/assignment02/wildlife.html" class="assignment-link">Assignment 2</a></li>
+          <li><a href="https://durantchristian.github.io/csce242/assignments/assignment03/pagelayout.html" class="assignment-link">Assignment 3</a></li>
         </ul>
       </div>
     </body>
