edited assignment 3 stylesheet

--- a/csce242/assignments/assignment03/pagelayout.html
+++ b/csce242/assignments/assignment03/pagelayout.html
@@ -22,9 +22,18 @@
             <h2>Big Ideas!</h2>
             <article>
                 <h3>Idea 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                <img src="https://fakeimg.pl/200x200" alt="Placeholder Image">
-                <img src="https://fakeimg.pl/200x200" alt="Placeholder Image">
+                <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
+                <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-right">
+            </article>
+            <article>
+                <h3>Idea 2</h3>
+                <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
+                <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-left">
+            </article>
+            <article>
+                <h3>Idea 3</h3>
+                <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
+                <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-right">
             </article>
         </section>
         <aside>
