--- a/csce242/assignments/assignment03/pagelayout.html
+++ b/csce242/assignments/assignment03/pagelayout.html
@@ -7,6 +7,9 @@
 <body>
     <!-- CSCE 242: Website Applications -->
     <!-- Christian Durant -->
+    <header>
+        <h1>Layout with Flex</h1>
+    </header>
     <nav>
         <ul>
             <li><a href="">Home</a></li>
@@ -18,6 +21,42 @@
         </ul>
     </nav>
     <main>
+        <div class="links-titles-wrapper">
+        <section class="titles">
+            <div class="titles-container">
+                <div class="title-box">
+                    <h3>Title 1</h3>
+                    <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="title-box">
+                    <h3>Title 2</h3>
+                    <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="title-box">
+                    <h3>Title 3</h3>
+                    <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="title-box">
+                    <h3>Title 4</h3>
+                    <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="title-box">
+                    <h3>Title 5</h3>
+                    <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="title-box">
+                    <h3>Title 6</h3>
+                    <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+        </section>
+    </div>
         <section class="content">
             <h2>Big Ideas!</h2>
             <article>
