--- a/csce242/index.html
+++ b/csce242/index.html
@@ -8,28 +8,30 @@
       <div id="content-container">
         <h1 id="main-heading">CSCE 242: Website Applications</h1>
         <h1 id="author-name">Christian Durant</h1>
-
-        <p>
-          The website applications class focuses on web technologies to support client-server computing. It also, 
-          involves implementation of client-server applications. The students will be utilizing HTML and CSS to
-          design the front-end of a website; matching a given specification. Students will be using javaScript to
-          add functionality to their website. On the back-end, students will learn to utilize node and sever side 
-          javaScript to store and retrieve data from a server. Students are able to interact with the instructor, 
-          as well as interact with other students, during in class discussions. The students will be engage in 
-          course content by completeing programming assignments, projects, and participation activities. 
-          The learning outcome of the class will consists of understanding the fundamentals of source control, 
-          being able to create an environment for successful website development using HTML, CSS, and javaScript, 
-          able to apply object-oriented software development to a javaScript environment, able to gather and parse 
-          info contained in JSON, able to create server side applications, and being able to apply the fundamentals 
-          of client and server side computing and create applications which exchange data.
-        </p>
-
         <h2 id="assignments-heading">Assignments</h2>
-        <ul id="assignments-list">
-          <li><a href="https://durantchristian.github.io/csce242/assignments/assignment01/communication.html" class="assignment-link">Communication</a></li>
-          <li><a href="https://durantchristian.github.io/csce242/assignments/assignment02/wildlife.html" class="assignment-link">Assignment 2</a></li>
-          <li><a href="https://durantchristian.github.io/csce242/assignments/assignment03/pagelayout.html" class="assignment-link">Assignment 3</a></li>
-        </ul>
+
+        <section class="assignments">
+          <div class="assignment">
+            <h3>Assignment 1 - Communication</h3>
+            <a href="https://durantchristian.github.io/csce242/assignments/assignment01/communication.html">
+              <img src="images/assignment01SS.png" alt="Assignment 1 Preview">
+            </a>
+          </div>
+          
+          <div class="assignment">
+            <h3>Assignment 2 - Basic CSS</h3>
+            <a href="https://durantchristian.github.io/csce242/assignments/assignment02/wildlife.html">
+              <img src="images/assignment02SS.png" alt="Assignment 2 Preview">
+            </a>
+          </div>
+
+          <div class="assignment">
+            <h3>Assignment 3 - Page Layout</h3>
+            <a href="https://durantchristian.github.io/csce242/assignments/assignment03/pagelayout.html">
+              <img src="" alt="Assignment 3 Preview">
+            </a>
+          </div>
+        </section>
       </div>
     </body>
 </html>
