--- a/csce242/assignments/assignment03/pagelayout.html
+++ b/csce242/assignments/assignment03/pagelayout.html
@@ -20,8 +20,28 @@
             <li><a href="">Contact Us</a></li>
         </ul>
     </nav>
+
     <main>
-        <div class="links-titles-wrapper">
+        <section class="content">
+            <h2>Big Ideas!</h2>
+            <article>
+                <h3>Idea 1</h3>
+                <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
+                <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-right">
+            </article>
+            <article>
+                <h3>Idea 2</h3>
+                <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
+                <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-left">
+            </article>
+            <article>
+                <h3>Idea 3</h3>
+                <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
+                <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-right">
+            </article>
+        </section>
+        
+        <div class="container">
         <section class="titles">
             <div class="titles-container">
                 <div class="title-box">
@@ -57,24 +77,7 @@
             </div>
         </section>
     </div>
-        <section class="content">
-            <h2>Big Ideas!</h2>
-            <article>
-                <h3>Idea 1</h3>
-                <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
-                <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-right">
-            </article>
-            <article>
-                <h3>Idea 2</h3>
-                <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
-                <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-left">
-            </article>
-            <article>
-                <h3>Idea 3</h3>
-                <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
-                <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-right">
-            </article>
-        </section>
+        
         <aside>
             <h3>Links</h3>
             <ul>
@@ -84,6 +87,30 @@
                 <li><a href="pagelayout.html">Item 4</a></li>
             </ul>
         </aside>
+
+        <div class="container">
+            <section class="titles">
+        <div class="titles-container">
+        <div class="title-box">
+            <h3>Title 1</h3>
+            <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="title-box">
+            <h3>Title 2</h3>
+            <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="title-box">
+            <h3>Title 3</h3>
+            <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="title-box">
+            <h3>Title 4</h3>
+            <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
     </main>
     <footer>Footer Content</footer>
 </body>
