re edited pagelayout.html

--- a/csce242/assignments/assignment03/pagelayout.html
+++ b/csce242/assignments/assignment03/pagelayout.html
@@ -12,12 +12,12 @@
     </header>
     <nav>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Store</a></li>
-            <li><a href="">Staff</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="https://durantchristian.github.io/csce242/">Home</a></li>
+            <li><a href="pagelayout.html">About</a></li>
+            <li><a href="pagelayout.html">Blog</a></li>
+            <li><a href="pagelayout.html">Store</a></li>
+            <li><a href="pagelayout.html">Staff</a></li>
+            <li><a href="pagelayout.html">Contact Us</a></li>
         </ul>
     </nav>
 
@@ -40,7 +40,7 @@
                 <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-right">
             </article>
         </section>
-        
+
         <div class="container">
         <section class="titles">
             <div class="titles-container">
