--- a/csce242/assignments/assignment03/pagelayout.html
+++ b/csce242/assignments/assignment03/pagelayout.html
@@ -41,42 +41,29 @@
             </article>
         </section>
 
-        <div class="container">
-        <section class="titles">
-            <div class="titles-container">
-                <div class="title-box">
-                    <h3>Title 1</h3>
-                    <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div class="title-box">
-                    <h3>Title 2</h3>
-                    <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div class="title-box">
-                    <h3>Title 3</h3>
-                    <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div class="title-box">
-                    <h3>Title 4</h3>
-                    <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div class="title-box">
-                    <h3>Title 5</h3>
-                    <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div class="title-box">
-                    <h3>Title 6</h3>
-                    <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
+        <div class="links-titles-wrapper">
+        <section class="titles left-titles-container">
+            <div class="title-box">
+                <h3>Title 1</h3>
+                <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+                <p>Lorem ipsum dolor sit amet.</p>
             </div>
+            <div class="title-box">
+                <h3>Title 2</h3>
+                <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="title-box">
+                <h3>Title 3</h3>
+                <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="title-box">
+                <h3>Title 4</h3>
+                    <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
         </section>
-    </div>
         
         <aside>
             <h3>Links</h3>
@@ -88,15 +75,13 @@
             </ul>
         </aside>
 
-        <div class="container">
-            <section class="titles">
-        <div class="titles-container">
-        <div class="title-box">
-            <h3>Title 1</h3>
-            <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
-            <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="title-box">
+        <section class="titels right-titles-container">
+            <div class="title-box">
+                <h3>Title 1</h3>
+                <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="title-box">
             <h3>Title 2</h3>
             <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
             <p>Lorem ipsum dolor sit amet.</p>
@@ -111,6 +96,18 @@
             <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
+        <div class="title-box">
+            <h3>Title 5</h3>
+            <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="title-box">
+            <h3>Title 6</h3>
+            <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        </section>
+    </div>
     </main>
     <footer>Footer Content</footer>
 </body>
