re edited pagelayout.html

--- a/csce242/assignments/assignment03/pagelayout.html
+++ b/csce242/assignments/assignment03/pagelayout.html
@@ -25,25 +25,19 @@
         <section class="content">
             <h2>Big Ideas!</h2>
             <article>
-                <div class="article-content">
                 <h3>Idea 1</h3>
                 <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
                 <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-right">
-                </div>
             </article>
             <article>
-                <div class="article-content">
                 <h3>Idea 2</h3>
                 <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
                 <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-left">
-                </div>
             </article>
             <article>
-                <div class="article-content">
                 <h3>Idea 3</h3>
                 <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
                 <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-right">
-                </div>
             </article>
         </section>
 
@@ -115,6 +109,6 @@
         </section>
     </div>
     </main>
-    <footer>Footer Content</footer>
+    <footer>@durantchristian.github.io</footer>
 </body>
 </html>
