--- a/csce242/assignments/assignment03/pagelayout.html
+++ b/csce242/assignments/assignment03/pagelayout.html
@@ -25,18 +25,24 @@
         <section class="content">
             <h2>Big Ideas!</h2>
             <article>
+                <div class="article-content">
                 <h3>Idea 1</h3>
                 <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
+                </div>
                 <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-right">
             </article>
             <article>
+                <div class="artilce-content">
                 <h3>Idea 2</h3>
                 <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
+                </div>
                 <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-left">
             </article>
             <article>
+                <div class="article-content">
                 <h3>Idea 3</h3>
                 <p>Quisque tincidunt felis vitae nulla dapibus, sit amet tincidunt purus pellentesque.</p>
+                </div>
                 <img src="https://fakeimg.pl/200x200" alt="Placeholder Image" class="image-right">
             </article>
         </section>
