--- a/csce242/assignments/assignment03/pagelayout.html
+++ b/csce242/assignments/assignment03/pagelayout.html
@@ -48,7 +48,7 @@
         </section>
 
         <div class="links-titles-wrapper">
-        <section class="titles left-titles-container">
+        <section class="titles-container">
             <div class="title-box">
                 <h3>Title 1</h3>
                 <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
@@ -81,7 +81,7 @@
             </ul>
         </aside>
 
-        <section class="titels right-titles-container">
+        <section class="titles-container">
             <div class="title-box">
                 <h3>Title 1</h3>
                 <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
