--- a/csce242/assignments/assignment03/pagelayout.html
+++ b/csce242/assignments/assignment03/pagelayout.html
@@ -81,7 +81,7 @@
             </ul>
         </aside>
 
-        <section class="titles-container-right">
+        <section class="titles-container">
             <div class="title-box">
                 <h3>Title 1</h3>
                 <img src="https://fakeimg.pl/200x50" alt="Placeholder Image">
