re edited styles

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -11,26 +11,26 @@
         <h2 id="assignments-heading">Assignments</h2>
 
         <section class="assignments">
+          <a href="https://durantchristian.github.io/csce242/assignments/assignment01/communication.html">
           <div class="assignment">
             <h3>Assignment 1 - Communication</h3>
-            <a href="https://durantchristian.github.io/csce242/assignments/assignment01/communication.html">
               <img src="images/assignment01SS.png" alt="Assignment 1 Preview">
-            </a>
           </div>
+          </a>
           
+          <a href="https://durantchristian.github.io/csce242/assignments/assignment02/wildlife.html">
           <div class="assignment">
             <h3>Assignment 2 - Basic CSS</h3>
-            <a href="https://durantchristian.github.io/csce242/assignments/assignment02/wildlife.html">
               <img src="images/assignment02SS.png" alt="Assignment 2 Preview">
-            </a>
           </div>
+          </a>
 
+          <a href="https://durantchristian.github.io/csce242/assignments/assignment03/pagelayout.html">
           <div class="assignment">
             <h3>Assignment 3 - Page Layout</h3>
-            <a href="https://durantchristian.github.io/csce242/assignments/assignment03/pagelayout.html">
-              <img src="" alt="Assignment 3 Preview">
-            </a>
+              <img src="images/assignment03SS.png" alt="Assignment 3 Preview">
           </div>
+          </a>
         </section>
       </div>
     </body>
