--- a/csce242/03flex/index.html
+++ b/csce242/03flex/index.html
@@ -7,6 +7,7 @@
     <body>
         <div id="content">
             <header>
+                <img id="main-logo" src="https://pixum.photos/50">
                 <h1>Main Title</h1>
                 <nav id="main-nav">
                     <ul>
@@ -14,6 +15,14 @@
                         <li><a href="#">About</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+                <nav id="sub-nav">
+                    <ul class="columns">
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                    <li><a href="#">Link 4</a></li>
                     </ul>
                 </nav>
             </header>
@@ -73,7 +82,10 @@
                             </ul>
                         <section class="three gallery">blah</section>
                     </div>
-                        
+                        <div id="animation - fun">
+                            <h3>Let's Animate</h3>
+                            <div id="ball"></div>
+                        </div>
             </main>
             <footer>
                 <p>&copy; myname</p>
