--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -9,10 +9,10 @@
         <!--Top Bar-->
         <header>
             <div class="gateways">
-                <strong>GATEWAYS FOR:</strong> <a href="#">STUDENTS</a> | <a href="#">FACULTY & STAFF</a> | <a href="#">ALUMNI</a> | <a href="#">PARENTS & FAMILIES</a> | <a href="#">CALENDAR</a> | <a href="#">MAP</a> | <a href="#">DIRECTORY</a> | <a href="#">APPLY</a> | <a href="#">GIVE</a>
+                <strong>GATEWAYS FOR:</strong> <a href="#">STUDENTS</a>  <a href="#">FACULTY & STAFF</a>  <a href="#">ALUMNI</a>  <a href="#">PARENTS & FAMILIES</a>| <a href="#">CALENDAR</a>  <a href="#">MAP</a>  <a href="#">DIRECTORY</a>  <a href="#">APPLY</a>  <a href="#">GIVE</a>
             </div>
             <div class="search-box">
-               <strong><input type="text" placeholder="SEARCH SC.EDU"></strong>
+              <input type="text" id="search-box" placeholder="SEARCH SC.EDU">
                 <button></button>
                 </div>
             </div>
