--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -31,6 +31,67 @@
                 </div>
             </section>
 
+            <!-- Main Layout -->
+    <main>
+        <!-- Sidebar Navigation -->
+        <aside class="sidebar">
+            <ul>
+                <li class="active">College of Arts and Sciences</li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Academics</a></li>
+                <li><a href="#">Departments, Schools and Programs</a></li>
+                <li><a href="#">Centers and Institutes</a></li>
+                <li><a href="#">Beyond the Classroom</a></li>
+                <li><a href="#">Research</a></li>
+                <li><a href="#">Alumni and Friends</a></li>
+                <li><a href="#">Support the College</a></li>
+            </ul>
+            <p class="my-arts"><a href="#">My Arts and Sciences »</a></p>
+        </aside>
+
+        <!-- Main Content Section -->
+        <section class="content">
+            <p>We are educating the next generation of leaders, thinkers, scientists, artists, performers, and 
+                other professionals to expand what's possible. Through robust research and creative work, 
+                we drive progress in our students' lives and communities in South Carolina and beyond.</p>
+
+            <!-- Image Sections -->
+            <div class="image-flex">
+                <div class="image-item">
+                    <img src="images/undergraduate.jpg" alt="Undergraduate student">
+                    <h3><a href="#">Undergraduate »</a></h3>
+                    <p>Find countless career paths with dozens of degree choices.</p>
+                </div>
+                <div class="image-item">
+                    <img src="images/graduate.jpg" alt="Graduate student">
+                    <h3><a href="#">Graduate »</a></h3>
+                    <p>Develop deep expertise with research and creative practice.</p>
+                </div>
+                <div class="image-item">
+                    <img src="images/departments.jpg" alt="Departments">
+                    <h3><a href="#">Departments »</a></h3>
+                    <p>Find your academic home in our departments and programs.</p>
+                </div>
+                <div class="image-item">
+                    <img src="images/careers.jpg" alt="Careers">
+                    <h3><a href="#">Careers »</a></h3>
+                    <p>Excel and advance with a degree in the arts and sciences.</p>
+                </div>
+                <div class="image-item">
+                    <img src="images/research.jpg" alt="Research">
+                    <h3><a href="#">Research »</a></h3>
+                    <p>Drive innovation by advancing the frontiers of what’s known.</p>
+                </div>
+                <div class="image-item">
+                    <img src="images/alumni.jpg" alt="Alumni & Friends">
+                    <h3><a href="#">Alumni & Friends »</a></h3>
+                    <p>Connect with fellow Gamecocks from your program.</p>
+                </div>
+                </div>
+            </section>
+        </main>
+
+
             <!--News Section-->
             <section class="news">
                 <h2>Arts and Sciences News</h2>
