--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -123,7 +123,8 @@
         <!--Footer Section-->
         <footer>
             <div class="footer-top">
-                <h2>College of Arts and Sciences</h2>
+                <h2>UNIVERSITY OF</h2>
+                <h2><strong>South Carolina</strong></h2>
                 <div class="footer-social">
                     <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
                     <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
@@ -138,8 +139,18 @@
                         <li>Business</li>
                         <li>Education</li>
                         <li>Engineering and Computing</li>
+                        <li>The Graduate School</li>
+                        <li>Hospitality, Retail and Sport Management</li>
+                        <li>Information and Communications</li>
                         <li>Law</li>
-                        <li>Medicine</li>
+                        <li>Medicine (Columbia)</li>
+                        <li>Medicine (Greenville)</li>
+                        <li>Music</li>
+                        <li>Nursing</li>
+                        <li>Pharmacy</li>
+                        <li>Public Health</li>
+                        <li>Social Work</li>
+                        <li>South Carolina Honors College</li>
                     </ul>
                 </div>
                 <div class="column">
@@ -147,9 +158,15 @@
                     <ul>
                         <li>Employment</li>
                         <li>Undergraduate Admissions</li>
-                        <li>Financial Aid</li>
+                        <li>Financial Aid and Scholarships</li>
+                        <li>Bursar (fee payment)</li>
                         <li>Veterans and Military Services</li>
+                        <li>Disability Resources</li>
+                        <li>Access and Opportunity</li>
+                        <li>Human Resources</li>
+                        <li>Law Enforcement and Safety</li>
                         <li>University Libraries</li>
+                        <li>All offices and Divisions</li>
                     </ul>
                 </div>
                 <div class="column">
@@ -159,11 +176,13 @@
                         <li>Campus Email</li>
                         <li>my.sc.edu</li>
                         <li>Blackboard</li>
+                        <li>Campus Safety and Wellness</li>
+                        <li>PeopleSoft Finance</li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>© University of South Carolina | Privacy | Civil Rights | Digital Accessibility | Contact</p>
+                <p>© University of South Carolina | Privacy | Student Consumer Information | Transparency Initiative | Civil Rights and Title IX | Digital Accessibility | Contact</p>
             </div>
         </footer>
     </body>
