--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -123,6 +123,7 @@
         <!--Footer Section-->
         <footer>
             <div class="footer-top">
+                <img src="images/usc_logo.png" alt="USC Logo">
                 <h2>UNIVERSITY OF</h2>
                 <h2><strong>South Carolina</strong></h2>
                 <div class="footer-social">
