--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -124,8 +124,10 @@
         <footer>
             <div class="footer-top">
                 <img src="images/usc_logo.png" alt="USC Logo">
+                <body>
                 <h2>UNIVERSITY OF</h2>
                 <h2><strong>South Carolina</strong></h2>
+                </body>
                 <div class="footer-social">
                     <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
                     <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
