updated main page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -32,6 +32,17 @@
           </a>
           </div>
         </section>
+
+        <h2 id="projects-heading">Projects</h2>
+        <section class="projects">
+          <div class="project">
+            <a href="https://durantchristian.github.io/csce242/projects/part2/index.html">
+            <h3>Project 1 - Wireframe</h3>
+              <img src="images/wireframe.png" alt="Project 1 Preview">
+          </a>
+          </div>
+          
+        </section>
       </div>
     </body>
 </html>
