--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -16,7 +16,7 @@
                 <button></button>
             </div>
             <div class="main-header">
-                <img src="images/usc_logo.png" alt="USC Logo">
+                <img src="https://place-hold.it/150x50/600/fff?text=USC+Logo" alt="USC Logo">
                 <h1>College of Arts and Sciences</h1>
             </div>
         </header>
@@ -24,7 +24,7 @@
         <!--Hero Section-->
         <main>
             <section class="hero">
-                <img src="images/featured.jpg" alt="Garrison Gist and murals">
+                <img src="https://place-hold.it/800x300/ddd/000?text=Hero+Image" alt="Garrison Gist and murals">
                 <div class="hero-text">
                     <h2>CANVASSING THE CITY »</h2>
                     <p>Former USC football player Garrson Gist shows us his Charlotte murals.</p>
@@ -58,32 +58,32 @@
             <!-- Image Sections -->
             <div class="image-flex">
                 <div class="image-item">
-                    <img src="images/undergraduate.jpg" alt="Undergraduate student">
+                    <img src="https://place-hold.it/300x200/900/fff?text=Undergraduate" alt="Undergraduate student">
                     <h3><a href="#">Undergraduate »</a></h3>
                     <p>Find countless career paths with dozens of degree choices.</p>
                 </div>
                 <div class="image-item">
-                    <img src="images/graduate.jpg" alt="Graduate student">
+                    <img src="https://place-hold.it/300x200/008000/fff?text=Graduate" alt="Graduate student">
                     <h3><a href="#">Graduate »</a></h3>
                     <p>Develop deep expertise with research and creative practice.</p>
                 </div>
                 <div class="image-item">
-                    <img src="images/departments.jpg" alt="Departments">
+                    <img src="https://place-hold.it/300x200/800080/fff?text=Departments" alt="Departments">
                     <h3><a href="#">Departments »</a></h3>
                     <p>Find your academic home in our departments and programs.</p>
                 </div>
                 <div class="image-item">
-                    <img src="images/careers.jpg" alt="Careers">
+                    <img src="https://place-hold.it/300x200/FFA500/fff?text=Careers" alt="Careers">
                     <h3><a href="#">Careers »</a></h3>
                     <p>Excel and advance with a degree in the arts and sciences.</p>
                 </div>
                 <div class="image-item">
-                    <img src="images/research.jpg" alt="Research">
+                    <img src="https://place-hold.it/300x200/0000FF/fff?text=Research" alt="Research">
                     <h3><a href="#">Research »</a></h3>
                     <p>Drive innovation by advancing the frontiers of what’s known.</p>
                 </div>
                 <div class="image-item">
-                    <img src="images/alumni.jpg" alt="Alumni & Friends">
+                    <img src="https://place-hold.it/300x200/FF0000/fff?text=Alumni+%26+Friends" alt="Alumni & Friends">
                     <h3><a href="#">Alumni & Friends »</a></h3>
                     <p>Connect with fellow Gamecocks from your program.</p>
                 </div>
@@ -97,20 +97,20 @@
                 <h2>Arts and Sciences News</h2>
                 <p><strong>Find us here:</strong></p>
                 <div class="social-icons">
-                    <img src="images/facebook.png" alt="Facebook">
-                    <img src="images/x.png" alt="Twitter">
-                    <img src="images/instagram.ping" alt="LinkedIn">
-                    <img src="images/youtube.png" alt="YouTube">
+                    <img src="https://place-hold.it/30x30/3b5998/fff?text=F" alt="Facebook">
+                    <img src="https://place-hold.it/30x30/1DA1F2/fff?text=X" alt="Twitter">
+                    <img src="https://place-hold.it/30x30/E1306C/fff?text=IG" alt="LinkedIn">
+                    <img src="https://place-hold.it/30x30/FF0000/fff?text=YT" alt="YouTube">
                 </div>
                 <div class="news-item">
-                    <img src="images/flood.jpg" alt="Flooded road">
+                    <img src="https://place-hold.it/100x80/808080/fff?text=Flooding" alt="Flooded road">
                     <div class="news-content">
                         <h3>Video: USC professor, alumni work to prepare communities for hazardous events »</h3>
                         <p>From communities in the Southeast submerged by floodwaters to neighborhoods on the California coast battling raging wildfires...</p>
                     </div>
                 </div>
                 <div class="news-item">
-                    <img src="images/kyle_carpenter.jpg" alt="Kyle Carpenter receiving Medal of Honor">
+                    <img src="https://place-hold.it/100x80/800000/fff?text=Kyle+Carpenter" alt="Kyle Carpenter receiving Medal of Honor">
                     <div class="news-content">
                         <h3>USC alum, Medal of Honor recipient recognized at national championship »</h3>
                         <p>University of South Carolina alumnus and Medal of Honor recipient Marine Corporal (retired) Kyle Carpenter will be recognized during Monday's national championship...</p>
@@ -123,14 +123,14 @@
         <!--Footer Section-->
         <footer>
             <div class="footer-top">
-                <img src="images/usc_logo.png" alt="USC Logo">
+                <img src="https://place-hold.it/100x40/600/fff?text=USC+Logo" alt="USC Logo">
                 <h3>UNIVERSITY OF</h3>
                 <br>
                 <h2><strong>South Carolina</strong></h2>
                 <div class="footer-social">
-                    <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-                    <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
-                    <a href="#"><img src="images/x.png" alt="Twitter"></a>
+                    <a href="#"><img src="https://place-hold.it/30x30/3b5998/fff?text=F" alt="Facebook"></a>
+                    <a href="#"><img src="https://place-hold.it/30x30/E1306C/fff?text=IG" alt="Instagram"></a>
+                    <a href="#"><img src="https://place-hold.it/30x30/1DA1F2/fff?text=X" alt="Twitter"></a>
                 </div>
             </div>
             <div class="footer-columns">
