--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -16,7 +16,7 @@
                 <button></button>
             </div>
             <div class="main-header">
-                <img src="https://place-hold.it/150x50/600/fff?text=USC+Logo" alt="USC Logo">
+                <img src="https://place-hold.it/150x50/900/fff?text=USC+Logo" alt="USC Logo">
                 <h1>College of Arts and Sciences</h1>
             </div>
         </header>
@@ -58,32 +58,32 @@
             <!-- Image Sections -->
             <div class="image-flex">
                 <div class="image-item">
-                    <img src="https://place-hold.it/300x200/900/fff?text=Undergraduate" alt="Undergraduate student">
+                    <img src="https://place-hold.it/300x200/ddd/fff?text=Undergraduate" alt="Undergraduate student">
                     <h3><a href="#">Undergraduate »</a></h3>
                     <p>Find countless career paths with dozens of degree choices.</p>
                 </div>
                 <div class="image-item">
-                    <img src="https://place-hold.it/300x200/008000/fff?text=Graduate" alt="Graduate student">
+                    <img src="https://place-hold.it/300x200/ddd/fff?text=Graduate" alt="Graduate student">
                     <h3><a href="#">Graduate »</a></h3>
                     <p>Develop deep expertise with research and creative practice.</p>
                 </div>
                 <div class="image-item">
-                    <img src="https://place-hold.it/300x200/800080/fff?text=Departments" alt="Departments">
+                    <img src="https://place-hold.it/300x200/ddd/fff?text=Departments" alt="Departments">
                     <h3><a href="#">Departments »</a></h3>
                     <p>Find your academic home in our departments and programs.</p>
                 </div>
                 <div class="image-item">
-                    <img src="https://place-hold.it/300x200/FFA500/fff?text=Careers" alt="Careers">
+                    <img src="https://place-hold.it/300x200/ddd/fff?text=Careers" alt="Careers">
                     <h3><a href="#">Careers »</a></h3>
                     <p>Excel and advance with a degree in the arts and sciences.</p>
                 </div>
                 <div class="image-item">
-                    <img src="https://place-hold.it/300x200/0000FF/fff?text=Research" alt="Research">
+                    <img src="https://place-hold.it/300x200/ddd/fff?text=Research" alt="Research">
                     <h3><a href="#">Research »</a></h3>
                     <p>Drive innovation by advancing the frontiers of what’s known.</p>
                 </div>
                 <div class="image-item">
-                    <img src="https://place-hold.it/300x200/FF0000/fff?text=Alumni+%26+Friends" alt="Alumni & Friends">
+                    <img src="https://place-hold.it/300x200/ddd/fff?text=Alumni+%26+Friends" alt="Alumni & Friends">
                     <h3><a href="#">Alumni & Friends »</a></h3>
                     <p>Connect with fellow Gamecocks from your program.</p>
                 </div>
@@ -97,10 +97,10 @@
                 <h2>Arts and Sciences News</h2>
                 <p><strong>Find us here:</strong></p>
                 <div class="social-icons">
-                    <img src="https://place-hold.it/30x30/3b5998/fff?text=F" alt="Facebook">
-                    <img src="https://place-hold.it/30x30/1DA1F2/fff?text=X" alt="Twitter">
-                    <img src="https://place-hold.it/30x30/E1306C/fff?text=IG" alt="LinkedIn">
-                    <img src="https://place-hold.it/30x30/FF0000/fff?text=YT" alt="YouTube">
+                    <img src="https://place-hold.it/30x30/900/fff?text=F" alt="Facebook">
+                    <img src="https://place-hold.it/30x30/900/fff?text=X" alt="Twitter">
+                    <img src="https://place-hold.it/30x30/900/fff?text=IG" alt="LinkedIn">
+                    <img src="https://place-hold.it/30x30/900/fff?text=YT" alt="YouTube">
                 </div>
                 <div class="news-item">
                     <img src="https://place-hold.it/100x80/808080/fff?text=Flooding" alt="Flooded road">
@@ -128,9 +128,9 @@
                 <br>
                 <h2><strong>South Carolina</strong></h2>
                 <div class="footer-social">
-                    <a href="#"><img src="https://place-hold.it/30x30/3b5998/fff?text=F" alt="Facebook"></a>
-                    <a href="#"><img src="https://place-hold.it/30x30/E1306C/fff?text=IG" alt="Instagram"></a>
-                    <a href="#"><img src="https://place-hold.it/30x30/1DA1F2/fff?text=X" alt="Twitter"></a>
+                    <a href="#"><img src="https://place-hold.it/30x30/900/fff?text=F" alt="Facebook"></a>
+                    <a href="#"><img src="https://place-hold.it/30x30/900/fff?text=IG" alt="Instagram"></a>
+                    <a href="#"><img src="https://place-hold.it/30x30/900/fff?text=X" alt="Twitter"></a>
                 </div>
             </div>
             <div class="footer-columns">
