edited image flex

--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -94,8 +94,8 @@
 
             <!--News Section-->
             <section class="news">
-                <h2>Arts and Sciences News</h2>
-                <p><strong>Find us here:</strong></p>
+                <h2 class="maroon-text">Arts and Sciences News</h2>
+                <p class="marron-text"><strong>Find us here:</strong></p>
                 <div class="social-icons">
                     <img src="https://place-hold.it/30x30/900/fff?text=F" alt="Facebook">
                     <img src="https://place-hold.it/30x30/900/fff?text=X" alt="Twitter">
