--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -99,7 +99,9 @@
                 <div class="social-icons">
                     <img src="https://place-hold.it/30x30/900/fff?text=F" alt="Facebook">
                     <img src="https://place-hold.it/30x30/900/fff?text=X" alt="Twitter">
-                    <img src="https://place-hold.it/30x30/900/fff?text=IG" alt="LinkedIn">
+                    <img src="https://place-hold.it/30x30/900/fff?text=IG" alt="Instagram">
+                    <img src="https://place-hold.it/30x30/900/fff?text=TH" alt="Thread">
+                    <img src="https://place-hold.it/30x30/900/fff?text=LI" alt="LinkedIn">
                     <img src="https://place-hold.it/30x30/900/fff?text=YT" alt="YouTube">
                 </div>
                 <div class="news-item">
@@ -119,6 +121,20 @@
                 <a href="#" class="view-more">View More News »</a>
             </section>
         </main>
+
+        <!--Ribbon Above Footer-->
+        <div class="footer-ribbon">
+            <div class="ribbon-content">
+                <h2>College of Arts and Sciences</h2>
+                <ul>
+                    <li><a href="#">Location</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Give</a></li>
+                    <li><a href="#">Calendar</a></li>
+                    <li><a href="#">Social Media</a></li>
+                </ul>
+            </div>
+        </div>
 
         <!--Footer Section-->
         <footer>
