--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -6,8 +6,18 @@
     </head>
     <body>
 
-        <!--Top Bar-->
-        <header>
+        <!--Top black ribbon-->
+        <div class="top-ribbon">
+            <div class="ribbon-left">
+                <img src="https://place-hold.it/150x50/800000/fff?text=USC+Logo" alt="USC Logo">
+                </div>
+                <div class="ribbon-center">
+                    <div class="university-title">
+                        <h3>UNIVERSITY OF</h3>
+                        <h1>South Carolina</h1>
+                    </div>
+                </div>
+                <div class="ribbon-right">
             <div class="gateways">
                 <strong>GATEWAYS FOR:</strong> <a href="#">STUDENTS</a>  <a href="#">FACULTY & STAFF</a>  <a href="#">ALUMNI</a>  <a href="#">PARENTS & FAMILIES</a> <a href="#">CALENDAR</a>  <a href="#">MAP</a>  <a href="#">DIRECTORY</a>  <a href="#">APPLY</a>  <a href="#">GIVE</a>
             </div>
@@ -15,11 +25,11 @@
               <input type="text" id="search-box" placeholder="SEARCH SC.EDU">
                 <button></button>
             </div>
-            <div class="main-header">
-                <img src="https://place-hold.it/150x50/800000/fff?text=USC+Logo" alt="USC Logo">
+            </div>
+            </div>
+            <div class="college-ribbon">
                 <h1>College of Arts and Sciences</h1>
             </div>
-        </header>
 
         <!--Hero Section-->
         <main>
