--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -151,8 +151,7 @@
             <div class="footer-top">
                 <img src="https://place-hold.it/100x40/000/fff?text=USC+Logo" alt="USC Logo">
                 <h3>UNIVERSITY OF</h3>
-                <br>
-                <h2><strong>South Carolina</strong></h2>
+                <h1>South Carolina</h1>
                 <div class="footer-social">
                     <a href="#"><img src="https://place-hold.it/30x30/900/fff?text=F" alt="Facebook"></a>
                     <a href="#"><img src="https://place-hold.it/30x30/900/fff?text=IG" alt="Instagram"></a>
