--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -23,7 +23,7 @@
             </div>
             <div class="search-box">
               <input type="text" id="search-box" placeholder="SEARCH SC.EDU">
-                <button></button>
+                <button>🔍</button>
             </div>
             </div>
             </div>
