--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -148,7 +148,7 @@
 
         <!--Footer Section-->
         <footer>
-            <div class="footer-top">
+            <div class="university-title">
                 <img src="https://place-hold.it/100x40/000/fff?text=USC+Logo" alt="USC Logo">
                 <h3>UNIVERSITY OF</h3>
                 <h1>South Carolina</h1>
