--- a/csce242/assignments/assignment04/csspage.html
+++ b/csce242/assignments/assignment04/csspage.html
@@ -148,15 +148,21 @@
 
         <!--Footer Section-->
         <footer>
-            <div class="university-title">
+            <div class="footer-top">
+                <div class="footer-left">
                 <img src="https://place-hold.it/100x40/000/fff?text=USC+Logo" alt="USC Logo">
+                <div class="footer-title">
                 <h3>UNIVERSITY OF</h3>
                 <h1>South Carolina</h1>
+                </div>
+                </div>
+                <div class="footer-right">
                 <div class="footer-social">
                     <a href="#"><img src="https://place-hold.it/30x30/900/fff?text=F" alt="Facebook"></a>
                     <a href="#"><img src="https://place-hold.it/30x30/900/fff?text=IG" alt="Instagram"></a>
                     <a href="#"><img src="https://place-hold.it/30x30/900/fff?text=X" alt="Twitter"></a>
                 </div>
+            </div>
             </div>
             <div class="footer-columns">
                 <div class="column">
