--- a/csce242/index.html
+++ b/csce242/index.html
@@ -37,8 +37,15 @@
         <section class="projects">
           <div class="project">
             <a href="https://durantchristian.github.io/csce242/projects/part2/index.html">
-            <h3>Project 1 - Wireframe</h3>
-              <img src="images/wireframe.png" alt="Project 1 Preview">
+            <h3>Project 1 part 1 - Topic Selection(PDF)</h3>
+              <img src="images/TopicSelection.png" alt="Project part 1 Preview">
+          </a>
+          </div>
+
+          <div class="project">
+            <a href="https://durantchristian.github.io/csce242/projects/part2/index.html">
+            <h3>Project 1 part 2 - Wireframe</h3>
+              <img src="images/wireframe.png" alt="Project part 2 Preview">
           </a>
           </div>
           
