pushed sript.js example

--- a/csce242/03flex/04_js_intro/coding.html
+++ b/csce242/03flex/04_js_intro/coding.html
@@ -11,6 +11,7 @@
                 <section>
                     <h3>My Title</h3>
                     <button id="btn_click_me">Click me!</button>
+                    <p id="result"></p>
                 </section>
             </main>
             <footer>
