pushed sript.js example

--- a/csce242/03flex/04_js_intro/coding.html
+++ b/csce242/03flex/04_js_intro/coding.html
@@ -6,12 +6,18 @@
     </head>
     <body>
         <div id="content">
+            <main class="columns">
             </header>
             <main>
                 <section>
-                    <h3>My Title</h3>
+                    <h3>Write to a Paragraph</h3>
                     <button id="btn_click_me">Click me!</button>
                     <p id="result"></p>
+                </section>
+                <section>
+                    <h3>Color Paragraph</h3>
+                    <button id="btn-color">Color Below</button>
+                    <p id="message">Hello</p>
                 </section>
             </main>
             <footer>
