edited color scheme

--- a/csce242/assignments/assignment07/index.html
+++ b/csce242/assignments/assignment07/index.html
@@ -26,7 +26,7 @@
             <!-- Image Change Card -->
             <div class="card">
                 <p>Image Change</p>
-                <img src="image1.jpg" alt="Placeholder" class="toggle-image" onclick="changeImage(this)">
+                <img src="https://fakeimg.pl/200x200/A6E3A1/909090" alt="Placeholder" class="toggle-image" onclick="changeImage(this)">
             </div>
         </div>
 
