--- a/csce242/03flex/04_js_intro/coding.html
+++ b/csce242/03flex/04_js_intro/coding.html
@@ -17,7 +17,16 @@
                 <section>
                     <h3>Color Paragraph</h3>
                     <button id="btn-color">Color Below</button>
-                    <p id="message">Hello</p>
+                    <button id="btn-sad">Be Sad</button>
+                    <button id="btn-clear">Clear</button>
+                    <p id="display" class="hidden"></p>
+                </section>
+                <section>
+                    <h1>Textbox</h1>
+                    <form>
+                        <label for="textbox">Enter Feeling:</label>
+                        <input type="text" id="textbox" name="textbox">
+                    </form>
                 </section>
             </main>
             <footer>
