--- a/csce242/assignments/assignment07/index.html
+++ b/csce242/assignments/assignment07/index.html
@@ -11,7 +11,7 @@
 
         <div class="cards">
             <!-- Say Hello Card -->
-            <div class="card hello-card" onclick="addHello(this)"> 
+            <div class="card hello-card"> 
                 <p>Say Hello</p>
                 <div class="hello-text"></div>
             </div>
@@ -26,7 +26,7 @@
             <!-- Image Change Card -->
             <div class="card">
                 <p>Image Change</p>
-                <img src="https://fakeimg.pl/200x200/A6E3A1/909090" alt="Placeholder" class="toggle-image" onclick="changeImage(this)">
+                <img src="https://fakeimg.pl/200x200/A6E3A1/909090" alt="Placeholder" class="toggle-image">
             </div>
         </div>
 
