edited project part 3

--- a/csce242/projects/part3/about.html
+++ b/csce242/projects/part3/about.html
@@ -45,6 +45,10 @@
             <p>Twitter: @GamingOverload</p>
             <p>YouTube: GamingOverload</p>
         </section>
+        
+        <section class="about-placeholder">
+            <img src="https://place-hold.it/200x200/ddd" alt="Placeholder Image">
+        </section>
     </main>
 </body>
 </html>
